Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: netflix-service
  namespace: netflix
spec:
  type: ClusterIP
  selector:
    app: netflix-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
